# video-interlacer

./: CMakeLists.txt  DualVideoInput.cpp  DualVideoInput.h  GenerateTests.cpp  README  Semaphore.h  expected.out  main.cpp  tests.sh
